Add intext citations and division of labour

--- a/main.tex
+++ b/main.tex
@@ -1587,12 +1587,12 @@ N/A
 \begin{enumerate}[{SR-P}1. ]
 \item The app must provide users with a legally adequate privacy policy, and ensure that users accept the policy before using the mobile application.
     \begin{itemize}
-        \item \textbf{Rationale:} A requirement of the Google Play Developer Distribution Agreement and the iOS Distribution Requirements.
+        \item \textbf{Rationale:} A requirement of the Google Play Developer Distribution Agreement [8] and the iOS Distribution Requirements[9].
     \end{itemize}
 
 \item The app must provide users with a readily available way of deleting their account and data, whether within or outside the mobile application.
     \begin{itemize}
-        \item \textbf{Rationale:} A requirement of the Google Play Data Deletion Policy and the iOS Account Deletion Requirement.
+        \item \textbf{Rationale:} A requirement of the Google Play Data Deletion Policy [10] and the iOS Account Deletion Requirement [11].
     \end{itemize}
 
 \item The app must protect user posts on the system to only be viewable by the authenticated user. No other authenticated or unauthenticated user can view these posts.
@@ -1771,9 +1771,15 @@ Include a Division of Labour sheet which indicates the contributions of each tea
 
 \subsection{Abdallah Alqashqish}
 \begin{itemize}
-    \item Test
+    \item \textbf{Section 1.2:} Wrote the scope of the project.
+	\item \textbf{Section 2.5:} Described the different assumptions and dependencies.
+	\item \textbf{Section 4:} BE 3, described the process of when a user submits a post with text.
+	\item \textbf{Section 4:} BE 8, described the process of a user registering for the app.
+	\item \textbf{Section 5.6} Described the security requirements of the system.
+	\item Formatted business events to match document format.
+	\item Formatted citations.
     \begin{center}
-        \includegraphics[scale=2]{Images/signature.png}
+        \includegraphics[scale=0.1]{Images/abdallah.jpg}
     \end{center}
 \end{itemize}
 
